--- a/app/src/main/res/layout/activity_lista_clientes.xml
+++ b/app/src/main/res/layout/activity_lista_clientes.xml
@@ -6,19 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".activities.ClientesActivity">
 
+    <TextView
+        android:id="@+id/tv_dados_cliente_nome"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="9"
+        android:fontFamily="monospace"
+        android:inputType="textPersonName"
+        android:text="Nome"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/rv_todos_clientes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_dados_cliente_telefone"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:ems="9"
+        android:text="Telefone"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_dados_cliente_nome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_dados_cliente_nome" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_todos_clientes"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="522dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.494" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_dados_cliente_nome" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -29,10 +58,12 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/rv_todos_clientes"
         app:layout_constraintEnd_toEndOf="@+id/rv_todos_clientes"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/rv_todos_clientes"
         app:layout_constraintTop_toTopOf="@+id/rv_todos_clientes"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
