--- a/app/src/main/res/layout/recyclerview_layout_item_todos_clientes.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_clientes.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_recyclerview_nome_clientes"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tv_recyclerview_telefone_clientes"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:textSize="18sp" />
+
 </LinearLayout>
