--- a/app/src/main/res/layout/recyclerview_layout_item_todos_fornecedores.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_fornecedores.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tv_recyclerview_nome_fornecedores"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_recyclerview_nome_fornecedor"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
         android:textSize="18sp" />
+
+
+    <TextView
+        android:id="@+id/tv_recyclerview_telefone_fornecedor"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:textSize="18sp" />
+
 </LinearLayout>
