--- a/app/src/main/res/layout/recyclerview_layout_item_todos_produtos.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_produtos.xml
@@ -5,14 +5,15 @@
 
     <TextView
         android:id="@+id/tv_recyclerview_nome_produto"
-        android:layout_width="180dp"
+        android:layout_width="115dp"
         android:layout_height="wrap_content"
         android:background="#00DBD5D5"
+        android:paddingLeft="10dp"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_recyclerview_preco_produto"
-        android:layout_width="100dp"
+        android:layout_width="105dp"
         android:layout_height="match_parent"
         android:background="#00F7F2F2"
         android:textAlignment="center"
@@ -20,7 +21,7 @@
 
     <TextView
         android:id="@+id/tv_recyclerview_qtd_produto"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:background="#00DBD5D5"
         android:textAlignment="center"
