--- a/app/src/main/res/layout/activity_cadastro_pedido_de_compra.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_compra.xml
@@ -104,6 +104,7 @@
         android:layout_height="110dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,12 +115,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:onClick="confirmarPedidoCompra"
         android:text="Confirma pedido"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_todos_itenscompra" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_lab_cadastro_compra_total" />
 
     <Button
         android:id="@+id/bt_cadastro_pedido_compra_limpa_lista_itens"
@@ -158,5 +161,32 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
         tools:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/tv_lab_cadastro_compra_total"
+        android:layout_width="180dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="8dp"
+        android:background="@android:color/darker_gray"
+        android:text="Total"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_todos_itenscompra" />
+
+    <TextView
+        android:id="@+id/tv_cadastro_pedido_compra_total"
+        android:layout_width="0dp"
+        android:layout_height="31dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/darker_gray"
+        android:textAlignment="viewEnd"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_lab_cadastro_compra_total"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_lab_cadastro_compra_total"
+        app:layout_constraintTop_toTopOf="@+id/tv_lab_cadastro_compra_total"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
